<resources>
    <string name="app_name" translatable="false">Barrista</string>

    <string name="onboarding_title_1">Title 1. Mega feature</string>
    <string name="onboarding_title_2">Title 2. Mega feature</string>
    <string name="onboarding_title_3">Title 3. Mega feature</string>
    <string name="onboarding_title_4">Title 4. Mega feature</string>
    <string name="onboarding_title_5">Title 5. Mega feature</string>

    <string name="onboarding_description_1">Subtitle 1. Mega feature, i can\'t imagine how you lived without this awesome handbook!</string>
    <string name="onboarding_description_2">Subtitle 2. Mega feature, i can\'t imagine how you lived without this awesome handbook!</string>
    <string name="onboarding_description_3">Subtitle 3. Mega feature, i can\'t imagine how you lived without this awesome handbook!</string>
    <string name="onboarding_description_4">Subtitle 4. Mega feature, i can\'t imagine how you lived without this awesome handbook!</string>
    <string name="onboarding_description_5">Subtitle 5. Mega feature, i can\'t imagine how you lived without this awesome handbook!</string>

    <string name="main_menu_news">News</string>
    <string name="main_menu_dishes">Dishes</string>
    <string name="main_menu_drinks">Drinks</string>
    <string name="main_menu_latte_art">Latte-art</string>
    <string name="main_menu_favorites">Favorites</string>

    <string name="app_search">Search</string>
    <string name="app_not_found_title">Nothing was found</string>
    <string name="app_not_found_description">Try to search something… another</string>
    <string name="app_available_on_google_play">%1$s at Google Play:</string>

    <string name="app_share">Share as</string>

    <string name="app_as_text">Text</string>
    <string name="app_as_pdf">Document</string>

    <string name="item_details_ingredients">Ingredients</string>
    <string name="item_details_instruction">How to prepare</string>

    <string name="dish_details_volume">Volume:</string>

    <string name="app_info_title">About</string>
    <string name="app_info_connect_with_us">Connect with us</string>
    <string name="app_info_rate_at_google_play">Rate at Google Play</string>
    <string name="app_info_created_by">Created with love <![CDATA[<br>by <a href="https://google.com">WEB M.Y.</a>]]></string>
</resources>