<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_bg"
        app:layout_constraintBottom_toTopOf="@id/viewGradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnInfo"
        android:layout_width="@dimen/main_btn_size"
        android:layout_height="@dimen/main_btn_size"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/bg_main_btn_dark"
        android:foreground="@drawable/ripple_btn"
        android:padding="@dimen/mini_padding"
        android:src="@drawable/ic_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnSettings"
        android:layout_width="@dimen/main_btn_size"
        android:layout_height="@dimen/main_btn_size"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/bg_main_btn_dark"
        android:foreground="@drawable/ripple_btn"
        android:padding="@dimen/mini_padding"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="124dp"
        android:layout_height="24dp"
        android:layout_marginTop="@dimen/default_margin"
        android:src="@drawable/ic_logo_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/bg_gradient"
        app:layout_constraintBottom_toTopOf="@id/viewGradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/viewGradient"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mini_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.eratart.baristashandbook.baseui.view.other.MenuItem
                android:id="@+id/itemNews"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:icon="@drawable/ic_item_news"
                app:text="@string/main_menu_news" />

            <com.eratart.baristashandbook.baseui.view.other.MenuItem
                android:id="@+id/itemDishes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:icon="@drawable/ic_item_dishes"
                app:text="@string/main_menu_dishes" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.eratart.baristashandbook.baseui.view.other.MenuItem
                android:id="@+id/itemDrinks"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:icon="@drawable/ic_item_drinks"
                app:text="@string/main_menu_drinks" />

            <com.eratart.baristashandbook.baseui.view.other.MenuItem
                android:id="@+id/itemLatteArt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:icon="@drawable/ic_item_latte_art"
                app:text="@string/main_menu_latte_art" />
        </LinearLayout>

        <com.eratart.baristashandbook.baseui.view.other.MenuItem
            android:id="@+id/itemFavorites"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:icon="@drawable/ic_item_favorites"
            app:text="@string/main_menu_favorites" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>